--- a/SailScores.Web/Pages/Help/_HelpNav.cshtml
+++ b/SailScores.Web/Pages/Help/_HelpNav.cshtml
@@ -5,7 +5,7 @@
 
 <nav class="nav flex-column help-side-nav bg-almost">
     <a asp-page="/Help/Index" class="nav-link @Active("/Help/Index")">Help Overview</a>
-    <a asp-page="/Help/FAQ" class="nav-link @Active("/Help/FAQ")">FAQ</a>
     <a asp-page="/Help/GettingStarted" class="nav-link @Active("/Help/GettingStarted")">Getting Started</a>
-    <a asp-page="/Help/Reference" class="nav-link @Active("/Help/Reference")">Deep Dive</a>
+    <a asp-page="/Help/FAQ" class="nav-link @Active("/Help/FAQ")">FAQ</a>
+    <a asp-page="/Help/Reference" class="nav-link @Active("/Help/Reference")">Reference</a>
 </nav>
