--- a/SailScores.Web/Pages/Help/FAQ.cshtml
+++ b/SailScores.Web/Pages/Help/FAQ.cshtml
@@ -169,11 +169,8 @@
             <summary class="h4">Is it easy for an assistant scorekeeper to add results?</summary>
             <div class="faq-details-content">
                 <p>
-                    We've created a quick start for assistant score keepers focused on race result entry, available in the
+                    We've created a <a href="/Help/EnteringRaceResults">quick start guide</a> for assistant score keepers focused on race result entry, available in the
                     Getting Started section.
-                </p>
-                <p class="alert alert-warning">
-                    <strong>TODO:</strong> Add a link to a Quick start for Assistant Scorekeepers in deepdive section.
                 </p>
             </div>
         </details>
