--- a/SailScores.Web/Pages/Help/GettingStarted.cshtml
+++ b/SailScores.Web/Pages/Help/GettingStarted.cshtml
@@ -36,8 +36,8 @@
           <dt>Season</dt>
           <dd>
             Series and Regattas belong to a Season. Seasons are typically a year long, and Series
-            will repeat each year, in a new Season. The date range of a Season is important:
-            races can only belong to series assigned to the correct season.
+            will repeat each year, in a new Season. The dates of a Season are important:
+            races can only belong to series assigned to a season including the date of the race.
           </dd>
 
           <dt>Series</dt>
