--- a/SailScores.Web/Pages/Help/FAQ.cshtml
+++ b/SailScores.Web/Pages/Help/FAQ.cshtml
@@ -195,7 +195,17 @@
                 </p>
             </div>
         </details>
-
+        <details class="faq-details">
+            <summary class="h4">Why don't series results show a total (before discards) column?</summary>
+            <div class="faq-details-content">
+                <p>
+                    The total before discards is not used in scoring according to Appendix A. Discarded scores
+                    are not used in most of the tie-breakers. In our experience, a "Total" column
+                    creates confusion for those new to Appendix A scoring, particularly when it doesn't
+                    match the tie-breaker results.
+                </p>
+            </div>
+        </details>
 
         <details class="faq-details">
             <summary class="h4">How does SailScores handle drops/discards?</summary>
