--- a/SailScores.Web/Views/Reports/Index.cshtml
+++ b/SailScores.Web/Views/Reports/Index.cshtml
@@ -16,7 +16,7 @@
             {
                 <div class="alert alert-info">
                     <strong>Note:</strong> To keep the service fast and free, some reports show only recent data.
-                    <a asp-controller="Supporter" asp-action="Index" target="_blank">Supporters</a>
+                    <a asp-controller="Supporter" asp-action="Index" asp-route-clubInitials="@null" target="_blank">Supporters</a>
                     get full historical access, which helps fund hosting and development.
                 </div>
             } else
