--- a/SailScores.Web/Pages/Help/Reference.cshtml
+++ b/SailScores.Web/Pages/Help/Reference.cshtml
@@ -6,8 +6,7 @@
 }
 
 <h1>About &amp; Reference</h1>
-<p>A quick look at Appendix A scoring.</p>
-
+<h2>Coming soon. Work in progress.</h2>
 <div class="preserve-whitespace" style="white-space: pre-wrap; font-family: inherit; line-height:1.4;">
 
   Things to write:
@@ -25,7 +24,7 @@
   <li>Shortcuts</li>
   <li>Customization tricks</li>
   <li>Behind the scenes logic: how to force a recalculation.</li>
-  <li>How Are regattas Different?</li>
+  <li>How Are regattas different?</li>
   <li>Choosing a scoring system: Overview of popular systems (Low Point, High Point, Bonus Point, etc.)</li>
 </ul>
 
