--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -55,7 +55,7 @@
     </div>
     <hr />
     <h3>January 1st, 2026</h3>
-    <h5>Supporters &amp; Growth</h5>
+    <h5>&#x1F389; Supporters &amp; Growth &#x1F389;</h5>
     <p>
         We’re excited to share a new way to support SailScores. The new
         <a asp-controller="supporter" asp-action="index">Pricing page</a> connects directly
