tiny text changes

--- a/SailScores.Web/Views/Supporter/Index.cshtml
+++ b/SailScores.Web/Views/Supporter/Index.cshtml
@@ -16,7 +16,7 @@
   <div class="row mb-4">
       <div class="col-12">
           <p class="lead">
-              Generous support helps provide this service to the sailing community worldwide.
+              Their generous contributions help provide this service to the sailing community worldwide.
           </p>
       </div>
   </div>
