Align definition of recent races

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -105,7 +105,7 @@
                                   {
                                       <span>@club.RecentSeriesCount series</span>
                                   }
-                                  <span> in past 2 weeks</span>
+                                  <span> recently</span>
                                 </div>
                               }
                             </div>
