--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -59,7 +59,7 @@
     @await Html.PartialAsync("_AdminToDoList", Model.Tips)
 }
 <div class="row">
-    <div class="col-6 col-sm-4">
+    <div class="col-6 col-md-5 col-lg-4">
         <a asp-controller="Race"
            asp-action="Create"
            class="btn btn-outline-primary btn-sm">@localizer["New Race"]</a>
