--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -60,7 +60,7 @@
         We’re excited to share a new way to support SailScores. The new
         <a asp-controller="supporter" asp-action="index">Pricing page</a> connects directly
         to Stripe and makes it easy for anyone to help cover the cost of running the service. We'll also highlight
-        clubs that opt in to sharing their patronage.
+        supporters who choose to be acknowledged.
     </p>
     <p>
         SailScores will <strong>continue to be free</strong> &mdash; that’s core to the project and isn’t changing.
@@ -69,9 +69,10 @@
         remains a volunteer effort, fueled by a love of sailing and a desire to make scoring easier for everyone.
     </p>
     <p>
-        You’ll also notice a refreshed Help section, where we’re adding clearer guides and
+        You’ll also notice a new Help section, where we’re adding guides and
         documentation. We aim to make SailScores intuitive, but sometimes a well‑written
-        page is the quickest way to get someone up to speed.
+        page is the quickest way to get someone up to speed. We'll be adding to this section and refining it
+        over the next few months.
     </p>
     <p>
         On the front page, you’ll now see a new layout that highlights clubs with recent activity
