Checksum checks for CDN scripts added

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,7 +6,7 @@
     <h1 class="h2">News</h1>
 
     <div id="mc_embed_shell">
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+        <link href="https://cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css" integrity="sha256-WIPn784vL2Neq61pBoUKyDrCI29nW8lp/1CMKtLG4EE=" crossorigin="anonymous">
         <style type="text/css">
             #mc_embed_signup {
             }
