--- a/SailScores.Web/Views/Reports/CompetitorStats.cshtml
+++ b/SailScores.Web/Views/Reports/CompetitorStats.cshtml
@@ -110,11 +110,11 @@
 
 @section Scripts {
     <!-- DataTables CSS loaded here as layout doesn't support Styles section -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" integrity="sha256-80yKCGG4FDVX1qP7g1/t+oiWyJa2Ra+NpwDtiCfYsRQ=" crossorigin="anonymous" />
     
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js" integrity="sha256-7EJ2UCFkHg8JTMgwnT9PmYr71oaDwAgBKsEaQTmELuY=" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js" integrity="sha256-3iXHrfSd4xzI1YyrooF0jG4OVwGiSAoU1+WdYwEwYZk=" crossorigin="anonymous"></script>
     
     <script>
         $(document).ready(function() {
