--- a/SailScores.Web/Views/Reports/Participation.cshtml
+++ b/SailScores.Web/Views/Reports/Participation.cshtml
@@ -111,7 +111,7 @@
 </div>
 
 @section Scripts {
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js" integrity="sha256-DiMmxoaAcr7BWSdgxnKQQ8ruopYKK0bO5qIZKqxqv/A=" crossorigin="anonymous"></script>
     <script src="~/js/participationChart.js" asp-append-version="true"></script>
     @if (Model.ParticipationData != null && Model.ParticipationData.Any())
     {
