Sonar suggested fixes

--- a/SailScores.Web/Views/Reports/WindAnalysis.cshtml
+++ b/SailScores.Web/Views/Reports/WindAnalysis.cshtml
@@ -74,7 +74,7 @@
 </div>
 
 @section Scripts {
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js" integrity="sha256-8glLv2FBs1lyLE/kVOtsSw8OQswQzHr5IfwVj864ZTk=" crossorigin="anonymous"></script>
     <script src="~/js/windAnalysisChart.js" asp-append-version="true"></script>
     @if (Model.WindData != null && Model.WindData.Any())
     {
