--- a/SailScores.Web/Views/Reports/ClubStats.cshtml
+++ b/SailScores.Web/Views/Reports/ClubStats.cshtml
@@ -39,14 +39,14 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th></th>
-                            <th></th>
-                            <th>Competitors</th>
-                            <th>Races</th>
-                            <th>Total Starts</th>
-                            <th>Race Days</th>
-                            <th>Ave Comp / race</th>
-                            <th>Dates</th>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
+                            <th scope="col">Competitors</th>
+                            <th scope="col">Races</th>
+                            <th scope="col">Total Starts</th>
+                            <th scope="col">Race Days</th>
+                            <th scope="col">Ave Comp / race</th>
+                            <th scope="col">Dates</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -63,11 +63,11 @@
                                 <tr>
                                     @if (firstRow)
                                     {
-                                        <th rowspan="@(seasonGroup.Count() == 2 ? 1 : seasonGroup.Count())" class="align-middle">
+                                        <th rowspan="@(seasonGroup.Count() == 2 ? 1 : seasonGroup.Count())" class="align-middle" scope="row">
                                             <h3>@seasonGroup.Key</h3>
                                         </th>
                                     }
-                                    <th>
+                                    <th scope="row">
                                         @if (String.IsNullOrWhiteSpace(stat.ClassName))
                                         {
                                             <h4>Total</h4>
