Continued SQ cleanup

--- a/SailScores.Web/Views/Supporter/Index.cshtml
+++ b/SailScores.Web/Views/Supporter/Index.cshtml
@@ -6,14 +6,14 @@
 }
 
   <!-- Free Service Message Section -->
-  <div class="row mb-5 mt-4">
+  <div class="row mb-3 mt-3">
       <div class="col-12">
-        <h1 class="display-4">SailScores is free for all clubs</h1><br /><h2 class="display-5">And made possible by our supporters</h2>
+        <h1 class="display-4">SailScores is free for all clubs</h1><h2 class="display-5">And made possible by our supporters</h2>
       </div>
   </div>
 
   <!-- Supporters List Section -->
-  <div class="row mb-4">
+  <div class="row mb-3">
       <div class="col-12">
           <p class="lead">
               Their generous contributions help provide this service to the sailing community worldwide.
