--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -340,4 +340,19 @@
 @section Scripts {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.min.js" integrity="sha256-+9Mf3cAVmxxudDsr1XwXUeRZFtvdWVYdq5/vcgiYyNU=" crossorigin="anonymous"></script>
 <script src="~/js/seriesChart.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('a[data-bs-toggle="tab"]').on('shown.bs.tab', function (e) {
+                var target = $(e.target).attr("href");
+                if (target && target.includes('Chart')) {
+                    var svg = $(target + ' svg.results-chart');
+                    if (svg.length > 0) {
+                        var seriesId = svg.attr('data-series-id');
+                        svg.empty();
+                        globalThis.drawChart(seriesId, '#' + svg.attr('id'));
+                    }
+                }
+            });
+        });
+    </script>
 }
