--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -339,7 +339,7 @@
 
 @section Scripts {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.min.js" integrity="sha256-+9Mf3cAVmxxudDsr1XwXUeRZFtvdWVYdq5/vcgiYyNU=" crossorigin="anonymous"></script>
-<script src="~/js/seriesChart.js"></script>
+<script src="~/js/seriesChart.min.js"></script>
     <script>
         $(document).ready(function() {
             $('a[data-bs-toggle="tab"]').on('shown.bs.tab', function (e) {
